--- a/.gitmodules
+++ b/.gitmodules
@@ -1,1 +1,5 @@
 
+[submodule "themes/hugo-product-launch"]
+	path = themes/hugo-product-launch
+	url = https://github.com/janraasch/hugo-product-launch.git
+	update = merge
